<resources>
    <string name="app_name">BookingFlats</string>
    <string name="no_results">No results 😓</string>
    <string name="apartment_name">Apartment Name:</string>
    <string name="distance">Distance:</string>
    <string name="number_of_bedrooms">Number of bedrooms:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_dates">Pick dates</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="apply">apply</string>
    <string name="book_the_apartment">Book the Apartment</string>
</resources>