<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.flats.screens.preview.PreviewFragment">

    <EditText
        android:id="@+id/et_number_of_rooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/number_of_rooms"
        android:inputType="number"
        android:maxLength="1" />

    <EditText
        android:id="@+id/ed_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:focusable="false"
        android:hint="@string/pick_dates"
        android:inputType="date" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/apply" />
</LinearLayout>