<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_bedroom_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_bedrooms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_bedroom_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/tv_bedroom_title"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1" />

        <TextView
            android:id="@+id/tv_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/apartment_name"
            app:layout_constraintStart_toStartOf="@id/tv_bedroom_title"
            app:layout_constraintTop_toBottomOf="@id/tv_bedroom_title" />

        <TextView
            android:id="@+id/tv_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/tv_name_title"
            app:layout_constraintTop_toBottomOf="@id/tv_bedroom_title"
            tools:text="test" />

        <TextView
            android:id="@+id/tv_distance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/distance"
            app:layout_constraintStart_toStartOf="@id/tv_bedroom_title"
            app:layout_constraintTop_toBottomOf="@id/tv_name_title" />

        <TextView
            android:id="@+id/tv_distance_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/tv_distance_title"
            app:layout_constraintTop_toBottomOf="@id/tv_name_title"
            tools:text="20 km" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>